<resources>
    <string name="app_name">VSAlternative</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="login_username_hint">Tài khoản</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_button_text">Đăng nhập</string>

    <string name="font_name">OpenSans</string>
    <string name="font_regular">Regular</string>
    <string name="font_bold">Bold</string>

    <string name="LAN_ip">Địa chỉ IP nội mạng</string>
    <string name="LAN_port">Cổng nội mạng</string>
    <string name="DNS_address">Địa chỉ ngoại mạng</string>
    <string name="DNS_port">Cổng ngoại mạng</string>
    <string name="txt_btn_login_setting_save">LƯU</string>
    <string name="txt_btn_login_setting_exit">THOÁT</string>
    <string name="txt_setting">Cài Đặt</string>
    <string name="txt_return">Quay lại</string>
    <string name="txt_Invalid_User">Tên hoặc mật khẩu không hợp lệ!</string>
    <string name="txt_error">Lỗi</string>
    <string name="txt_confirm">Chấp nhận</string>
    <string name="txt_network_not_config">Chưa cấu hình mạng</string>
    <string name="txt_main_connect_fail">Không thể kết nối tới bộ điều khiển trung tâm.\nKiểm tra cấu hình mạng.</string>
    <string name="txt_connecting">Đang kết nối tới bộ điều khiển trung tâm</string>
    <string name="txt_main_connect_problem">Kết nối tới bộ điều khiển trung tâm gặp sự cố.</string>
    <string name="txt_room_priority">Bạn không có quyền điều khiển thiết bị ở phòng này.</string>
    <string name="txt_disable_user">Tài khoản truy cập đã bị vô hiệu hóa.</string>
    <string name="txt_main_not_accept_connection">Bộ điều khiển trung tâm tạm thời ngắt kết nối.</string>
    <string name="txt_auth_fail">Tài khoản hoặc mật khẩu không chính xác.</string>
    <string name="txt_max_connection">Số lượng thiết bị truy cập vượt quá giới hạn cho phép.</string>
    <string name="txt_system_error">Lỗi hệ thống.</string>
    <string name="txt_lan_ip_error">Địa chỉ IP nội mạng không chính xác.</string>
    <string name="txt_wan_addr_error">Địa chỉ ngoại mạng không chính xác.</string>
    <string name="txt_lan_port_error">Cổng nội mạng không chính xác.</string>
    <string name="txt_wan_port_error">Cổng ngoại mạng không chính xác.</string>
    <string name="glb_description_img">img</string>
    <string name="glb_imgbutton_description">thiết lập</string>
    <string name="txt_title_hello">Xin chào</string>
    <string name="txt_control_panel">Bảng điều khiển</string>
    <string name="txt_scence">Ngữ cảnh</string>
    <string name="txt_cannot_connect_main">Không kết nối được tới bộ điều khiển trung tâm</string>
    <string name="txt_deleting_scene">Dang xóa cảnh</string>
    <string name="txt_yes">Có</string>
    <string name="txt_no">Không</string>
    <string name="txt_delete_confirm">Xác nhận</string>
    <string name="txt_delete_scene_question">Bạn có chắc muốn xóa cảnh này không?</string>
    <string name="txt_delete_voice_control_question">Bạn có chắc muốn xóa điều khiển giọng nói này không?</string>
    <string name="txt_scene_name_empty">Chưa đặt tên cảnh!</string>
    <string name="txt_empty_scene">Không có thiết bị trong cảnh!</string>
    <string name="txt_limit_scene">Bạn chỉ được phép thêm tối đa 24 thiết bị!</string>
    <string name="txt_null_date_scene">Hãy chọn ít nhất một ngày!</string>
    <string name="txt_picker_time">Thời gian</string>
    <string name="txt_saving_scene">Đang lưu cảnh</string>
    <string name="txt_editing_scene">Đang sửa cảnh</string>
    <string name="txt_delete_scene_fail">Xóa cảnh thất bại.</string>
    <string name="txt_edit_scene_fail">Sửa cảnh thất bại.</string>
    <string name="txt_cotroling_device_in_main">Đang xử lý </string>
    <string name="txt_admin_only">Chức năng này chỉ dành cho tài khoản admin</string>
    <string name="txt_admin_connecting">Tài khoản admin đang truy cập</string>
    <string name="txt_voice_control_name_empty">Chưa đặt tên lệnh!</string>
    <string name="txt_voice_control_text_command_empty">Chưa đặt lệnh!</string>
    <string name="txt_empty_voice_control">Không có thiết bị thay đổi!</string>
    <string name="txt_pw_input_invalid">Mật khẩu nhập vào không đúng dạng.</string>
    <string name="txt_confirm_new_pw_fail">Mật khẩu xác nhận khác mật khẩu mới.</string>
    <string name="txt_old_password_fail">Mật khẩu cũ không chính xác.</string>
    <string name="txt_update_password_notice">Thông báo</string>
    <string name="txt_update_password_successful">Cập nhật mật khẩu thành công.</string>
    <string name="txt_update_password_false">Cập nhật mật khẩu thất bại.</string>
    <string name="txt_broadcast_scene_delete_failed">vn.com.vshome.SCENE_DELETE_FAILED</string>
    <string name="txt_broadcast_scene_delete_successful">vn.com.vshome.SCENE_DELETE_SUCCESSFUL</string>
    <string name="txt_broadcast_device_control_successful">vn.com.vshome.DEVICE_CONTROL_SUCCESSFUL</string>
    <string name="txt_broadcast_device_control_failed">vn.com.vshome.DEVICE_CONTROL_FAILED</string>
    <string name="txt_update_lighting_device_state">vn.com.vshome.UPDATE_LIGHTING_DEVICE_STATE</string>
    <string name="txt_broadcast_scene_save_successful">vn.com.vshome.SCENE_SAVE_SUCCESSFUL</string>
    <string name="txt_broadcast_scene_save_failed">vn.com.vshome.SCENE_SAVE_FAILED</string>
    <string name="txt_broadcast_scene_edit_successful">vn.com.vshome.SCENE_EDIT_SUCCESSFUL</string>
    <string name="txt_broadcast_scene_edit_failed">vn.com.vshome.SCENE_EDIT_FAILED</string>
    <string name="txt_broadcast_schedule_update_successful">vn.com.vshome.SCHEDULE_UPDATE_SUCCESSFUL</string>
    <string name="txt_broadcast_schedule_update_failed">vn.com.vshome.SCHEDULE_UPDATE_FAILED</string>
    <string name="txt_broadcast_config_lighting_device_successful">vn.com.vshome.CONFIG_LIGHTING_DEVICE_SUCCESSFUL</string>
    <string name="txt_broadcast_config_lighting_device_failed">vn.com.vshome.CONFIG_LIGHTING_DEVICE_FAILED</string>
    <string name="txt_broadcast_update_password_successful">vn.com.vshome.UPDATE_PASSWORD_SUCCESSFUL</string>
    <string name="txt_broadcast_update_password_failed">vn.com.vshome.UPDATE_PASSWORD_FAILED</string>
    <string name="txt_disconnected_error">Không thể điều khiển thiết bị do mất kết nối.</string>
    <string name="txt_no_response">Không có phản hồi từ thiết bị.</string>
    <string name="txt_actuator_disconnected">Thiết bị chấp hành bị mất kết nối.</string>
    <string name="txt_main_connection_broken">Mất kết nối tới bộ điều khiển trung tâm, đang kết nối lại...</string>
    <string name="txt_main_reconnected">Đã kết nối lại tới bộ điều khiển trung tâm</string>
    <string name="foscam_login_promote_success">Đăng nhập thành công.</string>
    <string name="foscam_login_promote_fail_usr_pwd_error">Tài khoản hoặc mật khẩu không chính xác.</string>
    <string name="foscam_login_promote_fail_access_deny">Từ chối truy cập</string>
    <string name="foscam_login_promote_fail_exceed_max_user">Quá giới hạn số người truy cập.</string>
    <string name="foscam_login_promote_fail_connect_fail">Không thể kết nối tới camera.</string>
    <string name="btn_OK">OK</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="app_exit_title">Exit</string>
    <string name="app_exit_warning">Are you sure to exit?</string>
    <string name="live_view_no_network_promote">No network connection is availabled</string>
    <string name="title_activity_light">LightActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="help">
<![CDATA[
      <p>The value of input is <font color=\'#00ff00\'>positive</font> now.</p>
    ]]>
    </string>
    <string name="open_weather_maps_app_id">5fde82267b5ded9b6bcad1385b312bbd</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="title_activity_temp_light">TempLightActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_temp_lighting">TempLightingActivity</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="title_activity_crop">CropActivity</string>
    <string name="title_activity_activity_lighting_control">ActivityLightingControl</string>
    <string name="title_activity_lighting_control">LightingControlActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_room_selection">RoomSelectionActivity</string>
    <string name="title_activity_security">SecurityActivity</string>
</resources>
